# SpaceCadetPinball

./: .gitignore  CMakeLists.txt  skills-lock.json
Cli/: main.cpp
SpaceCadetPinball/: winmain.cpp
SpaceCadetPinballRust/: Cargo.toml  build.rs  port-plan.md
SpaceCadetPinballRust/src/: main.rs
SpaceCadetPinballRust/src/GameState/: assets.rs  mod.rs
SpaceCadetPinballRust/src/assets/: dat.rs  embedded.rs  group.rs  loader.rs  mod.rs
SpaceCadetPinballRust/src/engine/: bitmap.rs  geom.rs  math.rs  mod.rs  runtime.rs  time.rs
SpaceCadetPinballRust/src/engine/physics/: ball.rs  collision.rs  component.rs  edge.rs  edge_manager.rs  flipper_edge.rs  mod.rs
SpaceCadetPinballRust/src/engine/render/: mod.rs  scene.rs  sprite.rs  texture_cache.rs
SpaceCadetPinballRust/src/gameplay/: mod.rs
SpaceCadetPinballRust/src/gameplay/components/: component.rs  group.rs  group_name.rs  messages.rs  mod.rs  table.rs
SpaceCadetPinballRust/src/gameplay/components/table/: builder.rs  input.rs  text_box.rs  visuals.rs
SpaceCadetPinballRust/src/gameplay/mechanics/: blocker.rs  drain.rs  flipper.rs  gate.rs  kickback.rs  kickout.rs  light.rs  light_bargraph.rs  light_group.rs  light_rollover.rs  mod.rs  oneway.rs  placeholder.rs  plunger.rs  popup_target.rs  rollover.rs  sink.rs  solo_target.rs  tripwire.rs  wall.rs
SpaceCadetPinballRust/src/platform/: audio.rs  fullscreen.rs  input.rs  input_bindings.rs  mod.rs  options.rs  sdl_app.rs  ui.rs
